# sefaria-discord-bot

./: CLEANUP_SUMMARY.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  fly.toml  main.py  pyproject.toml  replit.md
bot/: ai_client.py  ai_message_handler.py  chabad_client.py  comprehensive_commands.py  dicta_client.py  discord_bot.py  hebcal_client.py  nli_client.py  opensiddur_client.py  opentorah_client.py  orayta_client.py  pninim_client.py  sefaria_client.py  torahcalc_client.py  utils.py
